<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6BFBF"
    tools:context=".MainActivity6">

    <TextView
        android:id="@+id/tito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/pot"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/time2"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tito" />

    <Button
        android:id="@+id/bot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:backgroundTint="#8E3D3D"
        android:text="@string/start"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temps" />

    <TextView
        android:id="@+id/rese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bot"
        app:layout_constraintVertical_bias="0.0" />


    <ProgressBar
        android:id="@+id/progres"
        style="?android:attr/progressBarStyle"
        android:layout_width="297dp"
        android:layout_height="264dp"
        android:indeterminateOnly="false"
        android:progress="100"
        android:progressDrawable="@drawable/progress_bar_design"
        app:layout_constraintBottom_toBottomOf="@+id/temps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temps" />

</androidx.constraintlayout.widget.ConstraintLayout>